# open-book-builder

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  screenshots.mjs  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: ACCESSIBILITY-AUDIT.md  REVERTED-CHANGES.md  VIEWPORT-REDESIGN.md
public/case/: sprint-5-backplate.stl  sprint-5-frontplate.stl  sprint-5.scad
scripts/: bake-dataset.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: assembly.json  bom-comparison.json  component_functions.json  discrepancies.json
src-tauri/icons/: icon.icns
src-tauri/src/: bom.rs  bom_comparison.rs  dataset.rs  eagle.rs  footprint_heights.rs  kicad_pcb.rs  lib.rs  main.rs  net_category.rs  types.rs
src/components/: AboutView.tsx  AssemblyView.tsx  BoardView.tsx  BoardViewport.tsx  BomView.tsx  CaseView.tsx  DiscrepancyBanner.tsx  DiscrepancyView.tsx  ViewportToolbar.tsx
src/lib/: dataset-context.tsx  dataset-source.ts  digikey-csv.ts  exporter.ts  hero-meshes.ts  navigation-context.tsx  scene-renderer.ts  types.ts  use-assembly-progress.ts  use-breakpoint.ts  use-discrepancy-resolution.ts  use-persisted-state.ts  viewport-context.tsx
