[package]
name = "open-book-builder"
version = "0.1.0"
description = "Open Book Builder — visualize, verify, and source The Open Book e-reader"
authors = ["Christopher Corella"]
edition = "2021"

[lib]
name = "open_book_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-book-builder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
thiserror = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
# KiCad 6 `.kicad_pcb` files are canonical Lisp S-expressions. We walk the
# tree with `lexpr` rather than a KiCad-specific crate: `kicad-parse-gen`
# hasn't shipped since 2018 and can't parse KiCad 6 (version 20211014), and
# `kiutils` isn't on crates.io. lexpr is ~388k downloads, 2023-maintained,
# and gives us a generic `Value` tree we can walk in ~350 LOC.
lexpr = "0.2"
